[gd_scene load_steps=5 format=3 uid="uid://bq3ph8aw40wqb"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_li6uo"]
[ext_resource type="PackedScene" uid="uid://bfr2es7lli3g1" path="res://scenes/Map.tscn" id="2_7lu6l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y2nl5"]
size = Vector2(1152, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ltku8"]
size = Vector2(16, 652)

[node name="Game" type="Node2D"]
script = ExtResource("1_li6uo")

[node name="bg" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="bg"]
offset_right = 1152.0
offset_bottom = 24.0
color = Color(0.607843, 0.607843, 0.607843, 1)

[node name="ColorRect2" type="ColorRect" parent="bg"]
offset_left = 176.0
offset_top = 24.0
offset_right = 200.0
offset_bottom = 56.0
color = Color(0.607843, 0.607843, 0.607843, 1)

[node name="ColorRect7" type="ColorRect" parent="bg"]
offset_left = -16.0
offset_top = 24.0
offset_right = 8.0
offset_bottom = 56.0
color = Color(0.607843, 0.607843, 0.607843, 1)

[node name="ColorRect8" type="ColorRect" parent="bg"]
offset_left = -16.0
offset_top = 24.0
offset_right = 8.0
offset_bottom = 56.0
color = Color(0.607843, 0.607843, 0.607843, 1)

[node name="ColorRect3" type="ColorRect" parent="bg"]
offset_left = 432.0
offset_top = 24.0
offset_right = 456.0
offset_bottom = 56.0
color = Color(0.607843, 0.607843, 0.607843, 1)

[node name="ColorRect4" type="ColorRect" parent="bg"]
offset_left = 688.0
offset_top = 24.0
offset_right = 712.0
offset_bottom = 56.0
color = Color(0.607843, 0.607843, 0.607843, 1)

[node name="ColorRect5" type="ColorRect" parent="bg"]
offset_left = 944.0
offset_top = 24.0
offset_right = 968.0
offset_bottom = 56.0
color = Color(0.607843, 0.607843, 0.607843, 1)

[node name="ColorRect6" type="ColorRect" parent="bg"]
offset_left = 1144.0
offset_top = 24.0
offset_right = 1168.0
offset_bottom = 56.0
color = Color(0.607843, 0.607843, 0.607843, 1)

[node name="players" type="Node2D" parent="."]

[node name="1" type="Label" parent="players"]
offset_left = 8.0
offset_right = 176.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="2" type="Label" parent="players"]
offset_left = 232.0
offset_right = 400.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="3" type="Label" parent="players"]
offset_left = 496.0
offset_right = 664.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="4" type="Label" parent="players"]
offset_left = 744.0
offset_right = 912.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="5" type="Label" parent="players"]
offset_left = 976.0
offset_right = 1144.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="back_menu" type="Node2D" parent="."]

[node name="back" type="Button" parent="back_menu"]
offset_left = 1128.0
offset_right = 1156.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 35
text = ">"

[node name="back_dialog" type="ConfirmationDialog" parent="back_menu"]
initial_position = 2
dialog_text = "Do you want to leave?"

[node name="timer_start" type="Node2D" parent="."]

[node name="figures" type="Node2D" parent="."]

[node name="Map" parent="figures" instance=ExtResource("2_7lu6l")]
is_main = true

[node name="borders" type="Node2D" parent="."]

[node name="down" type="StaticBody2D" parent="borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders/down"]
position = Vector2(576, 657)
shape = SubResource("RectangleShape2D_y2nl5")

[node name="up" type="StaticBody2D" parent="borders"]
position = Vector2(0, -664)

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders/up"]
position = Vector2(576, 657)
shape = SubResource("RectangleShape2D_y2nl5")

[node name="left" type="StaticBody2D" parent="borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders/left"]
position = Vector2(-8.5, 324)
shape = SubResource("RectangleShape2D_ltku8")

[node name="right" type="StaticBody2D" parent="borders"]
position = Vector2(1168, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders/right"]
position = Vector2(-8, 314)
shape = SubResource("RectangleShape2D_ltku8")

[node name="events" type="Node2D" parent="."]

[node name="pos" type="Marker2D" parent="events"]
position = Vector2(576, 320)

[node name="positions_figures" type="Node2D" parent="."]

[node name="0" type="Marker2D" parent="positions_figures"]
position = Vector2(96, 96)

[node name="1" type="Marker2D" parent="positions_figures"]
position = Vector2(288, 96)

[node name="2" type="Marker2D" parent="positions_figures"]
position = Vector2(576, 96)

[node name="3" type="Marker2D" parent="positions_figures"]
position = Vector2(832, 96)

[node name="4" type="Marker2D" parent="positions_figures"]
position = Vector2(1024, 96)

[connection signal="button_down" from="back_menu/back" to="." method="_on_back_button_down"]
[connection signal="canceled" from="back_menu/back_dialog" to="." method="_on_back_dialog_canceled"]
[connection signal="confirmed" from="back_menu/back_dialog" to="." method="_on_back_dialog_confirmed"]
